--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "randomstring": "^1.3.0",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
